# Q64-adaptive-dynamics

./: Cargo.toml  ImplementationPlan.md  Q64_MATHEMATICAL_FOUNDATIONS.md  README.md  pyproject.toml  q64_reference_test.py  q64_stratified_engine.py  setup.py
docs/: EMPIRICAL_PROTOCOL.md  FAILURE_MODES_AND_V2_VISION.md  HIERARCHICAL_PRIMITIVES.md  IMPLEMENTATION_NOTES.md  MANIFEST.md  THE_CRITICAL_TURN.md
examples/: examples_empirical.py
menger_sponge_q64/: Cargo.toml  README.md  pyproject.toml
menger_sponge_q64/python/menger_sponge_q64/: __init__.py
python/q64/: analysis_code_library.py  core_dynamics.py
q64-adaptive-dynamics/: CONTRIBUTING.md  LICENSE
q64-adaptive-dynamics/docs/: IMPLEMENTATION_NOTES.md
q64-adaptive-dynamics/examples/: basic_usage.py
q64-adaptive-dynamics/python/q64/: __init__.py  core_dynamics.py
q64-adaptive-dynamics/tests/: test_integration.py
tests/: test_integration.py
