[package]
name = "q64-adaptive-dynamics"
version = "1.0.0"
edition = "2021"
authors = ["Q64 Collaborative Architecture"]
license = "AGPL-3.0-only"
description = "Q64: Adaptive Representational Dynamics - Multi-scale structure discovery via spectral projection and frozen referential anchoring"
repository = "https://github.com/Dedoc-9/Q64-adaptive-dynamics"
homepage = "https://github.com/Dedoc-9/Q64-adaptive-dynamics"
documentation = "https://github.com/Dedoc-9/Q64-adaptive-dynamics/blob/main/docs/README.md"
readme = "README.md"
keywords = ["adaptive", "dynamics", "representation", "spectral", "hierarchy"]
categories = ["science", "algorithms", "data-structures"]

[lib]
name = "q64"
path = "src/lib.rs"

[[bin]]
name = "q64_validator"
path = "src/bin/validator.rs"
required-features = ["cli"]

[features]
default = ["python"]
python = ["pyo3"]
cli = ["clap", "serde_json"]
full = ["python", "cli", "vendored"]
vendored = []

[dependencies]
numpy = { version = "0.20", optional = true }
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
scipy = { version = "0.20", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
ndarray = "0.15"
ndarray-linalg = "0.16"
lapack-src = "0.10"
openblas-src = "0.10"

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
proptest = "1.0"

[[bench]]
name = "spectral_convergence"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
