[build-system]
requires = ["setuptools>=65.0", "wheel", "maturin[pyo3]"]
build-backend = "maturin"

[project]
name = "q64-adaptive-dynamics"
version = "1.0.0"
description = "Q64: Adaptive Representational Dynamics - Multi-scale structure discovery via spectral projection and frozen referential anchoring"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Q64 Collaborative Architecture", email = "research@q64.org"},
]
keywords = ["adaptive", "dynamics", "representation", "spectral", "hierarchy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "isort>=5.12",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.20",
]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/Dedoc-9/Q64-adaptive-dynamics"
Repository = "https://github.com/Dedoc-9/Q64-adaptive-dynamics"
Documentation = "https://github.com/Dedoc-9/Q64-adaptive-dynamics/blob/main/docs/README.md"
Issues = "https://github.com/Dedoc-9/Q64-adaptive-dynamics/issues"

[tool.maturin]
python-source = "python"
sdist-include = ["LICENSE", "README.md", "docs/", "examples/"]

[tool.setuptools]
packages = ["q64"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=q64 --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["q64"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
